--- a/ECExtensions.csproj
+++ b/ECExtensions.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>ECExtensions</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Timothy Gollowitsch</Authors>
+    <PackageDescription>Provide extension methods for Elliptic Curve Modular Arithmetic</PackageDescription>
+    <RepositoryUrl>https://github.com/TGollowitsch/ECExtensions</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
